--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,6 +12,7 @@
 <body>
     {% block content %}
     <div class="jumbotron">
+        <div class="panel panel-primary panel-heading"
     
     </div>
 </body>
