--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -5,11 +5,11 @@
         <div class="collapse navbar-collapse" id="menu">
             <ul class="navbar-nav mx-auto">
                 <li class="nav-item"><a href="/" class="nav-link">Home</a></li>
-                <li class="nav-item"><a href="/pitches/interview" class="nav-link">Interview</a></li>
-                <li class="nav-item"><a href="/pitches/product" class="nav-link">Product</a></li>
-                <li class="nav-item"><a href="/pitches/promotion" class="nav-link">Promotion</a></li>
-                <li class="nav-item"><a href="/pitches/random" class="nav-link">Random</a></li>
-                <li class="nav-item"><a href="/pitches/funny" class="nav-link">Funny</a></li>
+                <li class="nav-item"><a href="/blogs/interview" class="nav-link">Interview</a></li>
+                <li class="nav-item"><a href="/blogs/product" class="nav-link">Product</a></li>
+                <li class="nav-item"><a href="/blogs/promotion" class="nav-link">Promotion</a></li>
+                <li class="nav-item"><a href="/blogs/random" class="nav-link">Random</a></li>
+                <li class="nav-item"><a href="/blogs/funny" class="nav-link">Funny</a></li>
 
             </ul>
             <ul class="navbar-nav ml-auto">
