made few changes to the style

--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-md navbar-light bg-light mb-3" style="font-size:2em;">
     <div class="container">
-        <a href="/" class="navbar-brand" style="font-size: 2em">BLOG APP!</a>
+        <a href="/" class="navbar-brand" style="font-size: 2em;font-family: monospace;">BLOG APP!</a>
         <button class="navbar-toggler" data-toggle="collapse" data-target="#menu"><span class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="menu">
             <ul class="navbar-nav mx-auto">
