--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,18 +1,21 @@
-{% extend 'base.html' %}
-{% import 'macros.html' as macros %}
-<!DOCTYPE html>
-<head>
-    <meta charset="utf-8"> {% if title %}
-    <title> {{ title }}</title>
-    {% else %}
-    <title> BLOG! </title>
-    {% endif %}
+{% extends 'base.html' %}
+{% import 'macros.html' as macro %}
 
-</head>
-<body>
-    {% block content %}
-    <div class="jumbotron">
-        <div class="panel panel-primary panel-heading">
-    
+{% block content %}
+<div class="container">
+    <br>
+    <br>
+    <br>
+    <h1 class="text-center" style="font-size: 4em"><strong>Welcome to Blog App</strong></h1>
+    {%if blogs%}
+    <div class="row">
+        {{macro.displayBlogs(blogs)}}
     </div>
-</body>
+    {% else %}
+    <h3 class="text-center">No blogs to display!!</h3>
+    {% endif %}
+    {% if current_user.is_authenticated %}
+    <a href="/blog/new" class="btn btn-info my-3">New Blog</a>
+    {% endif %}
+    {% endblock %}
+</div>
